2008-08-18 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/ipmi-ipmb-interface.h,
	libfreeipmi/src/interface/ipmi-ipmb-interface.c: New files.

	* libfreeipmi/include/freeipmi/freeipmi.h: Update for new .h file.

	* Update Makefiles as needed for new files.
	
2008-08-15 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Support various new ipmi cmds from messaging
	support section.
	
2008-08-15 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Support get system interface capabilities and get
	bt interface capabilities commands, templates, and api calls.

	* bmc-device/: Support --get-ssif-interface-capabilities,
	--get-kcs-interface-capabilities, --get-bt-interface-capabilities.
	
2008-08-15 Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c
	(_get_sensor_reading): If sensor slave address is not BMC,
	considering sensor unavailable.

	* libfreeipmi/include/freeipmi/sdr-cache/ipmi-sdr-cache.h,
	libfreeipmi/src/sdr-cache/ipmi-sdr-cache-read.c
	(ipmi_sdr_cache_search_sensor_number): Rename to
	ipmi_sdr_cache_search_sensor.  Search for sensor via sensor owner
	id and sensor number.

	* ipmi-sel/src/ipmi-sel-entry.c (_find_sdr_record,
	_get_sel_system_event_record): Find sensor via sensor number and
	id.

	* libfreeipmi/include/freeipmi/spec/ipmi-slave-address-spec.h:
	Rename IPMI_LAN_SLAVE_ADDRESS_BMC to IPMI_SLAVE_ADDRESS_BMC
	(support IPMI_LAN_SLAVE_ADDRESS_BMC w/ legacy macro).

	* General code cleanup.
	
2008-08-14 Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/: If sensor slave address is not BMC, do not
	read/output sensor reading.
	
2008-08-14 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/interface/ipmi-lan-interface.h,
	libfreeipmi/src/interface/ipmi-lan-interface.c (fill_lan_msg_hdr):
	Take rs_addr argument.

	* Adjust calls to fill_lan_msg_hdr globally as needed.
	
2008-08-12 Albert Chu <chu11@llnl.gov>

	* Tagged sunbmc_pre_experimental

	* Document that sunbmc driver is experimental.
